[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Standing Skull.png" type="Texture" id=1]
[ext_resource path="res://assets/game-of-squids/Game Of Squids.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/game-of-squids/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sounds/win-jingle.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 438.0
margin_top = 64.0
margin_right = 1181.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 1 )
text = "Game Over!"

[node name="WinnerSprite" type="Sprite" parent="."]
position = Vector2( 806, 379 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="WinnerText" type="Label" parent="."]
margin_left = 639.0
margin_top = 539.0
margin_right = 940.0
margin_bottom = 615.0
custom_fonts/font = ExtResource( 4 )
text = "Winner!"

[node name="PlayAgain" type="Button" parent="."]
margin_left = 114.0
margin_top = 649.0
margin_right = 537.0
margin_bottom = 731.0
custom_fonts/font = SubResource( 2 )
text = "Play Again?"

[node name="MainMenu" type="Button" parent="."]
margin_left = 1061.0
margin_top = 650.0
margin_right = 1484.0
margin_bottom = 732.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="WinJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
